sets background to correct color when sidebar is collapsed

--- a/styles/resources/css/custom.css
+++ b/styles/resources/css/custom.css
@@ -33,6 +33,7 @@
 	min-width: 18rem;
 }
 .app-footer {
+	background-color: #252831;
 	color: #fff;
 	border-top: solid 1px #30333c;
 }
