--- a/styles/theme/omicron/theme.css
+++ b/styles/theme/omicron/theme.css
@@ -5,7 +5,7 @@
 }
 
 .app-footer {
-    background: #1e2026 url(images/bg_footer.jpg) no-repeat bottom center;
+    background: #252831 url(images/bg_footer.jpg) no-repeat bottom center;
 }
 
 .res-sprite {
